Type check test.py on CI as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,6 @@ jobs:
       - name: run tests
         run: |
           mypy ./porth.py
+          mypy ./test.py
           python ./test.py
           python ./test.py -f ./examples/
