--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
-      - name: install dependencies
+      - name: install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -qq nasm gcc cmake g++
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 'pypy-3.7'
-          architecture: x64
-      - name: install dependencies
+      - name: install python dependencies
         run: |
           pip install mypy
       - name: run tests
