--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,4 @@ jobs:
           mypy ./test.py
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./examples/
+          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./euler/
