--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           mypy ./porth.py
           mypy ./test.py
-          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py
-          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./examples/
-          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./euler/
+          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./tests/
+          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./examples/
+          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./euler/
