--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - name: install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -qq nasm
+          sudo apt-get install -qq nasm qemu gcc-aarch64-linux-gnu
       - name: install python dependencies
         run: |
           pip3 install mypy
@@ -32,5 +32,3 @@ jobs:
           mypy ./porth.py
           mypy ./test.py
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py
-          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./examples/
-          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py -f ./euler/
