Compile porth.porth on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           mypy ./porth.py
           mypy ./test.py
+          ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./porth.py com ./porth.porth
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./tests/
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./examples/
           ./pypy3.7-v7.3.5-linux64/bin/pypy3 ./test.py run ./euler/
